update throw IllegalArgumentException when creating ProductRecord